--- a/Jupu/Jupu.csproj
+++ b/Jupu/Jupu.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spider\PageParser.cs" />
+    <Compile Include="Spider\StockDataSpider.cs" />
     <Compile Include="StockInfo.cs" />
     <EmbeddedResource Include="FrmDataManagement.resx">
       <DependentUpon>FrmDataManagement.cs</DependentUpon>
